--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -148,7 +148,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}{}
     \frametitle{Warum ist Geheimhaltung notwendig? - II}
-    Konkret möchte man mit der statistischen Geheimhaltung die Folgende Punkte bedienen (nach Begründung zum BStatG; BT-Drucks. Nr. 10/5345 vom 17. April 1986):
+    Konkret möchte man mit der statistischen Geheimhaltung die Folgende Punkte bedienen (nach Begründung zum BStatG; BT-Drucks. Nr. 10/5345 vom 17. April 1986) \cite{Nickl}:
     \begin{itemize}
         \item Schutz von einzelnen Personen und Entitäten vor der Offenlegung ihrer sensitiven Daten
         \item Aufrechterhaltung des Vertrauensverhältnisses zwischen den Befragten und den statistischen Ämtern und erhebenden Einrichtungen
@@ -159,7 +159,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}{}
     \frametitle{Warum ist Geheimhaltung notwendig? - III}
-    An manche Stellen erlauben Ausnahmen, die Geheimhaltung auszusetzen. Hier sind beispielsweise die folgenden Stellen betroffen:
+    An manche Stellen erlauben Ausnahmen, die Geheimhaltung auszusetzen. Hier sind beispielsweise die folgenden Stellen betroffen \cite{Nickl}:
     \begin{itemize}
         \item Wenn Befragte explizit einer Veröffentlichung von Einzelangaben zustimmen
         \item Wenn sich Informationen aus allgemein zugänglichen Quellen von öffentlichen Stellen beziehen
@@ -219,7 +219,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}
     \frametitle{Häufigkeits- und Wertetabellen - II}
-    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss.
+    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss \cite{Nickl}.
     \begin{center}
         \begin{tabular}{ r r }
          \textbf{Tabellenart} \vline & \textbf{Geheimhaltungsregeln} \\ 
@@ -237,7 +237,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}
     \frametitle{Häufigkeits- und Wertetabellen - II}
-    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss.
+    Für diese beiden Tabellentypen stehen eine Reihe an Geheimhaltungsregeln zur Verfügung, die beschreiben, wenn ein Geheimhaltungsverfahren angewandt werden muss \cite{Nickl}.
     \begin{center}
         \begin{tabular}{ r r }
          \textbf{Tabellenart} \vline & \textbf{Geheimhaltungsregeln} \\ 
@@ -262,13 +262,13 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \begin{theorem}[Mindestfallzahlregel]
         Ein Tabellenfeld bzw. eine Zelle $c$ wird genau dann geheim gehalten, wenn weniger als $n$ Einheiten darin enthalten sind, also $c < n$ gilt.
     \end{theorem}
-    In vielen Statistiken wird $n = 3$ gewählt, d.h. Zellenwerte kleiner als $3$ drüfen nicht veröffentlicht werden.
+    In vielen Statistiken wird $n = 3$ gewählt, d.h. Zellenwerte kleiner als $3$ drüfen nicht veröffentlicht werden \cite{Nickl}.
 \end{frame}
 
 
 \begin{frame}
-    \frametitle{Mindestfallzahlregel - Zellsperrung - I}
-    Nach Feststellung der kritischen Werte in einer Häufigkeitstabelle, kann ein Geheimhaltungsverfahren angewandt werden. Die verbreiteste Methode ist dabei die Zellsperrung.
+    \frametitle{Mindestfallzahlregel - Zellsperrung I}
+    Nach Feststellung der kritischen Werte in einer Häufigkeitstabelle, kann ein Geheimhaltungsverfahren angewandt werden. Die verbreiteste Methode ist dabei die Zellsperrung \cite{Rothe-1}, \cite{Nickl}.
     \begin{theorem}[Zellsperrung]
         Die Zellsperrung setzt sich aus zwei Schritten zusammen:
         \begin{enumerate}
@@ -281,7 +281,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{Mindestfallzahlregel - Zellsperrung - II}
+    \frametitle{Mindestfallzahlregel - Zellsperrung II}
     Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
     \textcolor{red}{Anwendung der Mindestfallzahlregel für $n = 3$}
     \begin{center}
@@ -300,7 +300,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{Mindestfallzahlregel - Zellsperrung - III}
+    \frametitle{Mindestfallzahlregel - Zellsperrung III}
     Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
     \textcolor{red}{Anwendung der Primärsperrung}
     \begin{center}
@@ -319,7 +319,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{Mindestfallzahlregel - Zellsperrung - IV}
+    \frametitle{Mindestfallzahlregel - Zellsperrung IV}
     Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
     \textcolor{red}{Anwendung der Sekundärsperrung}
     \begin{center}
@@ -338,7 +338,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{Mindestfallzahlregel - Zellsperrung - IV}
+    \frametitle{Mindestfallzahlregel - Zellsperrung V}
     Folgendes Beispiel soll die Anwendung der Zellsperrung illustieren. \\
     \textcolor{red}{Anwendung der Sekundärsperrung}
     \begin{center}
@@ -358,7 +358,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}
     \frametitle{$p$\%-Regel}
-    Die Defintion der folgenden Regel kann in \cite{Rothe} gefunden werden.
+    Die Defintion der folgenden Regel kann in \cite{Rothe-2} gefunden werden.
     \begin{theorem}[$p$\%-Regel]
         Ein Tabellenfeld bzw. eine Zelle $c$ wird genau dann geheim gehalten, wenn die Differenz $d$ zwischen dem Zellwert $c$ und dem zweitgrößten Beitrag $x_2$ den größten Beitrag $x_1$ um weniger als $p$\% übersteigt. Es gilt also 
         \begin{align}
@@ -371,7 +371,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{$p$\%-Regel - Beispiel - I}
+    \frametitle{$p$\%-Regel - Beispiel I}
     Die $p$\%-Regel soll am folgenden Beispiel illustieren werden. Gegeben seinen die Umsätze von drei verschiedenen (fiktiven) Bamberger Bierbrauereien.
     \begin{center}
         \begin{tabular}{ r r r r r }
@@ -389,7 +389,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 
 \begin{frame}
-    \frametitle{$p$\%-Regel - Beispiel - II}
+    \frametitle{$p$\%-Regel - Beispiel II}
     Die $p$\%-Regel soll am folgenden Beispiel illustieren werden. Gegeben seinen die Umsätze von drei verschiedenen (fiktiven) Bamberger Bierbrauereien.
     \begin{center}
         \begin{tabular}{ r r r r r }
@@ -630,10 +630,21 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \subsection{Probleme der CKM}
 
 \begin{frame}{}
-	\frametitle{Probleme der CKM - Nicht Additivität}
+	\frametitle{Probleme der CKM - Nicht Additivität I}
     \begin{figure}
 		\centering
         \includegraphics[width=0.25\linewidth]{img/ckm_6.png}
+        \caption{Gegenüberstellung von überlagerten Werten mit Originalwerten}
+	\end{figure} 
+\end{frame}
+
+
+\begin{frame}{}
+	\frametitle{Probleme der CKM - Nicht Additivität II}
+    \begin{figure}
+		\centering
+        \includegraphics[width=0.25\linewidth]{img/ckm_6.png}
+        \includegraphics[width=0.55\linewidth]{img/ckm_7.png}
         \caption{Gegenüberstellung von überlagerten Werten mit Originalwerten}
 	\end{figure} 
 \end{frame}
@@ -643,6 +654,17 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \section{Fazit}
 %------------------------------------------------
 
+\begin{frame}{}
+	\frametitle{Fazit}
+    \begin{itemize}
+        \item Die CKM ist ein gut \textbf{automatisierbares} Geheimhaltungsverfahren
+        \item Es kann \textbf{on top} bei bestehenden Auswertungs-Tools implementiert werden
+        \item Es bedarf einer klaren Kommuniktion der besonderen \textbf{Nicht-Additivität} an Außenstehende
+        \item Die CKM wird das zentrale Geheimhaltungsverfahren in der \textbf{amtlichen Hochschulstatistik}
+        \item Die CKM soll auch beim \textbf{Zensus 2022} für Auswertungen basierend auf Gebäude- und Wohnungsdaten, Haushaltsdaten und Familiendaten angewandt werden \footnotemark \footnotetext[1]{s. \url{https://www.zensus2022.de/DE/Zensusdatenbank/Geheimhaltung.html}}
+    \end{itemize}
+\end{frame}
+
 
 %------------------------------------------------
 % References
@@ -650,10 +672,10 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
 \begin{frame}
     \frametitle{Literaturverzeichnis}
-    \footnotesize{
+    \scriptsize{
         \begin{thebibliography}{99} % Beamer does not support BibTeX so references must be inserted manually as below
-            \bibitem[Bronstein, 2020]{Bronstein}  Bronstein, Ilja N., et al. 
-            \newblock Taschenbuch der Mathematik. 11. Auflage, Springer-Verlag, 2020.
+            %\bibitem[Bronstein, 2020]{Bronstein}  Bronstein, Ilja N., et al. 
+            %\newblock Taschenbuch der Mathematik. 11. Auflage, Springer-Verlag, 2020.
 
             \bibitem[Enderle, 2019]{Enderle} Enderle, Tobias und Meike Vollmar
             \newblock Geheimhaltung in der Hochschulstatistik. \emph{WISTA} | 6, Statistisches Bundesamt (Destatis), Wiesbaden 2019.
@@ -662,9 +684,12 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
             \newblock Die Cell-Key-Methode – ein Geheimhaltungsverfahren. \emph{Statistische Monatshefte Niedersachsen} 1, 2019.
 
             \bibitem[Nickl, 2019]{Nickl} Nickl, Andreas
-            \newblock Datenschutz, Geheimhaltung, Anonymisierung. Einführungsfortbildung LfStat, Fürth, 2019.
+            \newblock Datenschutz, Geheimhaltung, Anonymisierung. \emph{Einführungsfortbildung} Bayerisches Landesamt für Statistik,, Fürth, 2019.
 
-            \bibitem[Rothe, 2015]{Rothe} Rothe, Patrick
+            \bibitem[Rothe, 2015-5]{Rothe-1} Rothe, Patrick
+            \newblock Statistische Geheimhaltung – Der Schutz vertraulicher Daten in der amtlichen Statistik - Teil 1: Rechtliche und methodische Grundlagen \emph{Bayern in Zahlen} 5, Bayerisches Landesamt für Statistik, München, 2015.
+
+            \bibitem[Rothe, 2015-8]{Rothe-2} Rothe, Patrick
             \newblock Statistische Geheimhaltung – Der Schutz vertraulicher Daten in der amtlichen Statistik - Teil 2: Herausforderungen und aktuelle Entwicklungen. \emph{Bayern in Zahlen} 8, Bayerisches Landesamt für Statistik, München, 2015.
 
             \bibitem[Wipke, 2018]{Wipke} Wipke, Mirko
@@ -694,9 +719,6 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \newline
     \newline
     \qrcode{https://github.com/JoshuaSimon/Cell-Key-Method}
-
-    
-    
 \end{frame}
 
 %----------------------------------------------------------------------------------------
