--- a/src/ckm.ipynb
+++ b/src/ckm.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
        "9    Muenchen   m    0.046450"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
        "4   Wuerzburg   m      3        1.853099"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
        "4   Wuerzburg   m      3        1.853099              1"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "4   Wuerzburg   m      3        1.853099              0"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "4   Wuerzburg   m      3        1.853099              1"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "4   Wuerzburg   m      3        1.853099              1          4"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
        "4   Wuerzburg   m      4        1.853099"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -1422,7 +1422,7 @@
        "12         sum   i   1001      503.616894"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,7 @@
        "12         sum   i   1001      503.616894"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1735,7 +1735,7 @@
        "12         sum   i   1001      1001"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1903,13 +1903,22 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summe der berechneten Insgesamtwerte = 1012\n"
+     ]
     }
    ],
    "source": [
     "print(\"Insgesamt-Werte aus überlagerten Insgesamt-Zeilen.\")\n",
     "display(table_data2[overlayed_data2[\"sex\"] == \"i\"].iloc[:-1, [0, 2]])\n",
     "print(\"Berechnete Insgesamt-Werte aus überlagerten Einzelpositionen.\")\n",
-    "display(overlayed_data2[overlayed_data2[\"sex\"] != \"i\"].groupby([\"university\"]).agg(\"sum\").iloc[:, :-1])"
+    "display(overlayed_data2[overlayed_data2[\"sex\"] != \"i\"].groupby([\"university\"]).agg(\"sum\").iloc[:, :-2])\n",
+    "sum_ins = overlayed_data2[overlayed_data2[\"sex\"] != \"i\"].groupby([\"university\"]).agg(\"sum\").iloc[:, :-2].sum()\n",
+    "print(f\"Summe der berechneten Insgesamtwerte = {sum_ins[0]}\")"
    ]
   },
   {
