Fixed some typos

--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -198,7 +198,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \frametitle{Pre-tabulare und post-tabulare Verfahren}
     Weiter unterscheidt man Geheimhaltungsverfahren auch nach dem Zeitpunkt ihrer Durchführung:
     \begin{itemize}
-        \item \textbf{Pre-tabulare Verfahren}: Bei diesen Verfahren spricht man oft auch von einer Anonymisierung, da die Daten bereits vor der Tabellierung so verändert werden, dass keine kritschen Ergebnisse resultieren. Oftmals ist diese Art von Geheimhaltung aber nicht ausreichend, weshalb wetiere Verfahren im Anschluss angewandt werden müssen.
+        \item \textbf{Pre-tabulare Verfahren}: Bei diesen Verfahren spricht man oft auch von einer Anonymisierung, da die Daten bereits vor der Tabellierung so verändert werden, dass keine kritschen Ergebnisse resultieren. Oftmals ist diese Art von Geheimhaltung aber nicht ausreichend, weshalb weitere Verfahren im Anschluss angewandt werden müssen.
         \item \textbf{Post-tabulare Verfahren}: Diese Verfahren werden erst im Anschluss an die Tabellierung der Daten angewandt.
     \end{itemize}
 \end{frame}
@@ -227,7 +227,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
          \textbf{Häufigkeitstabellen} \vline & Mindestfallzahlregel, Randwertregel \\  
          \vline & \\
          \hline
-         \textbf{Wertetabellen} \vline & Dominanzz-Konzentrationsregeln:  \\
+         \textbf{Wertetabellen} \vline & Dominanz-Konzentrationsregeln:  \\
          \vline & $(1,k)$-Regel, $2,(k)$-Regel, $p$\%-Regel, \\
          \vline & Fallzahlregel
         \end{tabular}
@@ -245,7 +245,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
          \textbf{Häufigkeitstabellen} \vline & \textcolor{blue}{Mindestfallzahlregel}, Randwertregel \\  
          \vline & \\
          \hline
-         \textbf{Wertetabellen} \vline & Dominanzz-Konzentrationsregeln:  \\
+         \textbf{Wertetabellen} \vline & Dominanz-Konzentrationsregeln:  \\
          \vline & $(1,k)$-Regel, $2,(k)$-Regel, \textcolor{blue}{$p$\%-Regel}, \\
          \vline & Fallzahlregel
         \end{tabular}
@@ -286,7 +286,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \textcolor{red}{Anwendung der Mindestfallzahlregel für $n = 3$}
     \begin{center}
         \begin{tabular}{ r r r r }
-         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weiblich} & \textbf{insgesamt} \\ 
          \hline
          Bauingenieurwesen \vline & $4$ & $3$ & $7$ \\
          Informatik \vline & $9$ & $12$ & $21$ \\  
@@ -305,7 +305,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \textcolor{red}{Anwendung der Primärsperrung}
     \begin{center}
         \begin{tabular}{ r r r r }
-         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weiblich} & \textbf{insgesamt} \\ 
          \hline
          Bauingenieurwesen \vline & $4$ & $3$ & $7$ \\
          Informatik \vline & $9$ & $12$ & $21$ \\  
@@ -324,7 +324,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \textcolor{red}{Anwendung der Sekundärsperrung}
     \begin{center}
         \begin{tabular}{ r r r r }
-         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weiblich} & \textbf{insgesamt} \\ 
          \hline
          Bauingenieurwesen \vline & $\textcolor{red}{4}$ & $\textcolor{red}{3}$ & $7$ \\
          Informatik \vline & $9$ & $12$ & $21$ \\  
@@ -343,7 +343,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \textcolor{red}{Anwendung der Sekundärsperrung}
     \begin{center}
         \begin{tabular}{ r r r r }
-         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weilich} & \textbf{insgesamt} \\ 
+         \textbf{Studienfach} \vline & \textbf{männlich} & \textbf{weiblich} & \textbf{insgesamt} \\ 
          \hline
          Bauingenieurwesen \vline & \textcolor{red}{x} & \textcolor{red}{x} & $7$ \\
          Informatik \vline & $9$ & $12$ & $21$ \\  
@@ -382,7 +382,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \end{center}
     Die Anwendung der $p$\%-Regel mit $p = 10 \%$ und Zellenwert $c = 600.000$ liefert hier:
     \begin{itemize}
-        \item Größter Beitrag $x_1 = 600.000$
+        \item Größter Beitrag $x_1 = 900.000$
         \item Zweitgrößter Beitrag $x_2 = 250.000$
     \end{itemize}
 \end{frame}
@@ -400,7 +400,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \end{center}
     Die Anwendung der $p$\%-Regel mit $p = 10 \%$ und Zellenwert $c = 600.000$ liefert hier:
     \begin{itemize}
-        \item Größter Beitrag $x_1 = 600.000$
+        \item Größter Beitrag $x_1 = 900.000$
         \item Zweitgrößter Beitrag $x_2 = 250.000$
     \end{itemize}
     \begin{align}
@@ -541,7 +541,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \begin{frame}{}
 	\frametitle{Cell Key Methode - Methodik VIII}
     \textbf{3.1 - Lookup-Modul:  Auslesen der Überlagerungswerte aus der Überlagerungsmatrix}
-    Überlagerungsmatrix aus \cite{Höhne} mit $p_0 = 0.5$, $d = 4$, $s = 2.25$:
+    Überlagerungsmatrix aus \cite{Höhne} mit $P_0 = 0.5$, $d = 4$, $s = 2.25$:
     \begin{footnotesize}
     \begin{center}
         \begin{tabular}{ r r r r r r r r r r }
