--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -714,7 +714,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 
     \normalsize
     \centering
-    Folien, \LaTeX \: und Python Code verfügbar auf GitHub \faicon{github} unter:
+    Folien, \LaTeX \: und Python Code verfügbar auf GitHub unter:
     \url{https://github.com/JoshuaSimon/Cell-Key-Method}
     \newline
     \newline
