--- a/presentation/ckm_slides.tex
+++ b/presentation/ckm_slides.tex
@@ -124,7 +124,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
 \begin{frame}{}
     \frametitle{Veröffentlichungen in der amtlichen Statistik}
     \begin{itemize}
-        \item Das Ziel der amtlichen Statistik ist die Veröffentlichung von aufbereiteten Information und Daten für Bürger und andere Institutionen
+        \item Das Ziel der amtlichen Statistik ist die Veröffentlichung von aufbereiteten Informationen und Daten für Bürger und andere Institutionen
         \item Ein Großteil dieser Veröffentlichungen sind selbst (oder beinhalten) statistische Tabellen aus den amtlichen Daten
     \end{itemize}
 \end{frame}
@@ -137,7 +137,7 @@ Otto-Friedrich-University Bamberg \\ % Your institution for the title page
     \frametitle{Warum ist Geheimhaltung notwendig? - I}
     \begin{itemize}
         \item Im deutschen Grundgesetz beschreibt Artikel 2 die Grundlage für ein Recht auf \textbf{informationelle Selbstbestimmung} - das Fundament unseres modernen Datenschutzes
-        \item Die amtliche Statistik kommt dieser Verantwortung mit dem \textbf{Statistikgeheimnis} (§ 16 Abs. 1 Satz 1 BStatG) nach: \\
+        \item Die amtliche Statistik kommt dieser Verantwortung mit dem \textbf{Statistikgeheimnis} (§ 16 Abs. 1 Satz 1 BStatG) \cite{Nickl} nach: \\
         \textit{„Einzelangaben über persönliche und sachliche Verhältnisse, die für eine Bundesstatistik
         gemacht werden, sind von den Amtsträgern und für den öffentlichen Dienst besonders
         Verpflichteten, die mit der Durchführung von Bundesstatistiken betraut sind, geheim zu halten,
