--- a/paper/03_literatur_stat_ha.tex
+++ b/paper/03_literatur_stat_ha.tex
@@ -7,26 +7,23 @@
     % beliebige Zahl steht für die Anzahl der Quellen, z.B. 10 Quellen - zweistellige Zahl, 69 Quellen - zweistellige Zahl, 157 Quellen - dreistellige Zahl
 \singlespacing%
 
-\bibitem[LfStat]{LfStat}%
-Bayerisches Landesamt für Statistik (o.\,J.): \emph{Hochschulen}, online verfügbar unter: \url{https://www.statistik.bayern.de/statistik/bildung_soziales/hochschulen/index.html#link_1} (Zugriff am 29.12.2020).%
+\bibitem[Enderle, 2019]{Enderle} 
+Enderle, Tobias und Meike Vollmar: Geheimhaltung in der Hochschulstatistik. \emph{WISTA} | 6, Statistisches Bundesamt (Destatis), Wiesbaden 2019.
 
-\bibitem[Cri20]{cri20}%
-Crickard, Paul (2020): \emph{Data Engineering with Python}. Birmingham: Packt Publishing.%
+\bibitem[Höhne, 2019]{Höhne} 
+Höhne, Jörg und Julia Höninger: Die Cell-Key-Methode – ein Geheimhaltungsverfahren. \emph{Statistische Monatshefte Niedersachsen} 1, 2019.
 
-\bibitem[Kim13]{kim13}%
-Kimball, Ralph and Ross, Margy (2013): \emph{The Data Warehouse Toolkit: The Definitive Guide to Dimensional Modeling}. Indianapolis: Wiley.%
+\bibitem[Nickl, 2019]{Nickl} 
+Nickl, Andreas: Datenschutz, Geheimhaltung, Anonymisierung. \emph{Einfuührungsfortbildung} Bayerisches Landesamt für Statistik, Fürth, 2019.
 
-\bibitem[HStatG]{HStatG}
-Statistisches Bundesamt (o.\,J.): \emph{Gesetz über die Statistik für das Hochschulwesen (Hochschulstatistikgesetz – HStatG)}, online verfügbar unter: \url{https://www.destatis.de/DE/Methoden/Rechtsgrundlagen/Statistikbereiche/Inhalte/505_HStatG.pdf?__blob=publicationFile} (Zugriff am 29.12.2020).
+\bibitem[Rothe, 2015-5]{Rothe-1} 
+Rothe, Patrick: Statistische Geheimhaltung – Der Schutz vertraulicher Daten in der amtlichen Statistik - Teil 1: Rechtliche und methodische Grundlagen \emph{Bayern in Zahlen} 5, Bayerisches Landesamt für Statistik, München, 2015.
 
-\bibitem[Wik19]{T-SQL}%
-Wikipedia (2019): \emph{T-SQL - Wikipedia, Die freie Enzyklopädie}, online verfügbar unter: \url{https://de.wikipedia.org/wiki/Transact-SQL} (Zugriff am 10.01.2021).%
+\bibitem[Rothe, 2015-8]{Rothe-2} 
+Rothe, Patrick: Statistische Geheimhaltung – Der Schutz vertraulicher Daten in der amtlichen Statistik - Teil 2: Herausforderungen und aktuelle Entwicklungen. \emph{Bayern in Zahlen} 8, Bayerisches Landesamt für Statistik, München, 2015.
 
-\bibitem[Wik21]{Datawarehouse}%
-Wikipedia (2021): \emph{Datawarehouse - Wikipedia, Die freie Enzyklopädie}, online verfügbar unter: \url{https://de.wikipedia.org/wiki/Data_Warehouse} (Zugriff am 10.01.2021).%
-
-\bibitem[Wik21]{ETL}%
-Wikipedia (2021): \emph{ETL-Prozess - Wikipedia, Die freie Enzyklopädie}, online verfügbar unter: \url{https://de.wikipedia.org/wiki/ETL-Prozess} (Zugriff am 10.01.2021).%
+\bibitem[Wipke, 2018]{Wipke} 
+Wipke, Mirko: Geheimhaltung im Data Warehouse - Prototypische Implementierung von automatisierter Geheimhaltung im Data Warehouse für die amtliche Hochschulstatistik in Bayern. \emph{Bayern in Zahlen} 12, Bayerisches Landesamt für Statistik, Fürth, 2018.
 
 
 %\bibitem[Name, wie er mit cite im Text zitiert wird]{kuerzel ohne Umlaute, das mit cite angesprochen wird}%
